--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,20 +1,18 @@
-.header {
+.footer {
     background-color: lightgrey;
     width: 100%;
     height: 15vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-}
-
-.header__heading {
-    margin-top: 0;
-    font-size: 30px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
 }
 
 @media (min-width: 768px) {
-    .header__heading {
-        font-size: 40px;
+    .footer__paragraph {
+        font-size: 20px;
     }
 }
+
