--- a/src/UserInput/UserInput.css
+++ b/src/UserInput/UserInput.css
@@ -4,23 +4,25 @@
 }
 
 .form__textbox {
-    margin-top: 10px;
-    width: 50%;
+    margin-top: 15px;
+    width: 100%;
     height: auto;
     min-height: 250px;
     outline: none;
     resize: none;
     border: 1px solid grey;
+    font-size: 16px;
+    padding: 15px;
 }
 
 .btn {
-    margin-top: 25px;
+    margin-top: 35px;
+    width: 100%;
 }
 
 .btn-primary {
     background-color: darkgray;
     border: 1px solid white;
-    width: 15%;
     padding: 10px;
     color: white;
     border-radius: 5px;
@@ -35,6 +37,29 @@
 
 .validation-error {
     color: red;
-    font-size: 14px;
+    font-size: 16px;
     margin-bottom: 5px;
+}
+
+@media (min-width: 768px) {
+    .form__textbox {
+        width: 75%;
+        font-size: 18px;
+    }
+
+    .btn {
+        width: 75%;
+        font-size: 18px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .form__textbox {
+        width: 50%;
+        font-size: 25px;
+    }
+
+    .btn {
+        width: 50%;
+    }
 }
