--- a/src/UserInput/UserInput.css
+++ b/src/UserInput/UserInput.css
@@ -1,6 +1,7 @@
 .form__label {
     display: block;
     margin-bottom: 10px;
+    text-align: left;
 }
 
 .form__textbox {
@@ -42,24 +43,24 @@
 }
 
 @media (min-width: 768px) {
-    .form__textbox {
+    .form {
         width: 75%;
-        font-size: 18px;
+        margin-right: auto;
+        margin-left: auto;
     }
 
+    .form__textbox,
     .btn {
-        width: 75%;
         font-size: 18px;
     }
 }
 
 @media (min-width: 1024px) {
-    .form__textbox {
+    .form {
         width: 50%;
-        font-size: 25px;
     }
 
-    .btn {
-        width: 50%;
+    .form__textbox {
+        font-size: 25px;
     }
 }
