--- a/src/UserInput/UserInput.css
+++ b/src/UserInput/UserInput.css
@@ -6,7 +6,6 @@
     display: block;
     margin-bottom: 10px;
     text-align: left;
-    line-height: 1.2;
 }
 
 .form__textbox {
@@ -14,12 +13,16 @@
     width: 100%;
     height: auto;
     min-height: 250px;
-    outline: none;
+    outline: transparent;
+    outline-width: 5px;
     resize: none;
-    border: 1px solid grey;
     font-size: 16px;
     padding: 15px;
     margin-bottom: 15px;
+}
+
+.form__textbox:focus {
+    outline: #0F0F0F;
 }
 
 .btn {
@@ -46,7 +49,8 @@
     }
 
     .form__textbox,
-    .btn {
+    .btn,
+    .form__label {
         font-size: 18px;
     }
 }
