--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     background-color: #2D2E2E;
     width: 100%;
-    height: 15vh;
+    min-height: 15vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -9,7 +9,7 @@
     left: 0;
     bottom: 0;
     color: #FBFBFB;
-    margin-top: 5em;
+    margin-top: 2em;
 }
 
 @media (min-width: 768px) {
